syntax = "proto3";

package notifications;

message NotificationData {
    string id = 1;
    string userId = 2;
    string type = 3;
    string messageData = 4;
    bool delivered = 5;
}

message EmailData {
    string email = 1;
    string type = 2;
    string messageData = 3;
    int32 attempt = 4;
}

message Response {
    bool success = 1;
    string message = 2;
    string id = 3;
}

message  UserId {
    string Id = 1;
}

message PushNotifications {
    bool success = 1;
    string message = 2;
    repeated NotificationData notifications = 3;
}

message EmailAddress {
    string email = 1;
}

message Emails {
    bool success = 1;
    string message = 2;
    repeated EmailData emails = 3;
}

message Query {
    string userId = 1;
    string email = 2;
    bool delivered = 3;
    string partiallyContenten = 4;
}

service Notifications {
    rpc SendEmail (EmailData) returns (Response);
    rpc GetEmailsForEmailAddress (EmailAddress) returns (Emails);
    rpc FindEmailsForEmailByContent (Query) returns (Emails);
    rpc SendPushNotification (NotificationData) returns (Response);
    rpc GetPushNotificationsForUser (UserId) returns (PushNotifications);
    rpc FindPushNotificationsForUser (Query) returns (PushNotifications);
    rpc GetUndeliveredNotificationsForUser (UserId) returns (PushNotifications);
    rpc UpdatePushNotification (NotificationData) returns (Response);
}